@@ -25,4 +25,5 @@ LMC_0.1.3 {
  mongo_sync_gridfs_*;
  mongo_sync_cmd_create;
  mongo_sync_cmd_exists;
+ mongo_util_oid_as_string;
 } LMC_0.1.2;
